# sokoban

./: Cargo.toml  map.txt  map_easy.txt  map_sdz.txt  solution.txt  test_cli.sh
fyrox_sokoban/: Cargo.toml  objectif.png.options  settings.ron
fyrox_sokoban/data/: scene.rgs
fyrox_sokoban/editor/: Cargo.toml
fyrox_sokoban/editor/src/: main.rs
fyrox_sokoban/executor/: Cargo.toml
fyrox_sokoban/executor-android/: Cargo.toml
fyrox_sokoban/executor-android/src/: lib.rs
fyrox_sokoban/executor-wasm/: Cargo.toml  styles.css
fyrox_sokoban/executor-wasm/src/: lib.rs
fyrox_sokoban/executor/src/: main.rs
fyrox_sokoban/game/: Cargo.toml
fyrox_sokoban/game-dylib/: Cargo.toml
fyrox_sokoban/game-dylib/src/: lib.rs
fyrox_sokoban/game/src/: lib.rs
images/: rand_noise_shader.wgsl
src/: lib.rs  main.rs
src/data/: map.rs  mod.rs  movable.rs
src/ui/: cli.rs  ggez.rs  macroquad.rs  mod.rs  terminal.rs  tui.rs
