[package]
name = "sokoban"
version = "0.1.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
ggez = "0.9.3"

# [profile.dev.package."*"]
# opt-level = 3
